samples/InspectionApp/src/Salesforce/objects/Inspection_Response__c.object
<CustomObject>
    <fields>
        <fullName>Inspection__c</fullName>
        <label>Inspection</label>
        <referenceTo>Inspection__c</referenceTo>
        <relationshipLabel>Inspection Responses</relationshipLabel>
        <relationshipName>Inspection_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Responder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responder</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Inspection Responses</relationshipLabel>
        <relationshipName>Inspection_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Inspection Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0}</displayFormat>
        <label>Inspection Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>